--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
-                  <span>July 2024 - Present</span><br /><strong
+                  <span>July 2024 - August 2024</span><br /><strong
                     >Headstarter Fellowship Student</strong
                   >
 
@@ -195,17 +195,6 @@
                       This certification will bolster my cloud computing skills,
                       essential for my upcoming projects and professional growth
                       in tech.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <span>August 2024 - January 2025</span>
-                  <div class="goal-detail">
-                    <strong>Complete Code The Dream Program</strong>
-                    <p>
-                      Preparing for advanced software development tasks, this
-                      intensive program will refine my programming skills and
-                      project management capabilities.
                     </p>
                   </div>
                 </li>
