Updated Resume and Project

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <div class="work">
             <img src="images/project-2.png" alt="Future Project" />
             <div class="layer">
-              <h3>Pantry Tracker</h3>
+              <h3>Work in Progress: Pantry Tracker</h3>
               <p>
                 This web application (runs locally), built with Next.js,
                 Firebase, and Material UI, helps users manage pantry items
@@ -266,10 +266,14 @@
           <div class="work">
             <img src="images/project-3.png" alt="Future Project" />
             <div class="layer">
-              <h3>Future Project</h3>
+              <h3>Work in Progress: AI Customer Support Web Application</h3>
               <p>
-                This is a filler as there are no ongoing projects. If so, I'll
-                replace this slot.
+                Developed a web application using Next.js, incorporating the
+                Gemini API to deliver advanced AI-driven customer support
+                solutions. Created a Retrieval-Augmented Generation (RAG)
+                techniques to improve the relevance and contextual accuracy of
+                responses, leveraging real-time data retrieval to enhance
+                AI-driven support using Pinecone.
               </p>
             </div>
           </div>
